Add functioning mouse click links between related pages